--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -9,3 +9,7 @@ block.decay-mod-energy-container-consumer.name=Energy Container Consumer
 block.decay-mod-energy-container-consumer.description=It releases full energy containers to produce energy, and the empty energy containers will be discarded.
 block.decay-mod-energy-container-charger.name=Energy Container Charger
 block.decay-mod-energy-container-charger.description=The Charger charges an empty energy container into a full energy container.
+block.decay-mod-solar-thermal-collector.name=Solar Thermal Collector
+block.decay-mod-solar-thermal-collector.description=Unlike solar panels, it gathers sunlight and converts it into energy.
+block.decay-mod-large-solar-thermal-collector.name=Large solar Thermal Collector
+block.decay-mod-large-solar-thermal-collector.description=Unlike solar panels, it gathers sunlight and converts it into energy. More efficient than the standard Solar Thermal Collector.
