--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -18,4 +18,6 @@ block.decay-mod-large-solar-thermal-collector.description=Unlike solar panels, i
 block.decay-mod-wind-generator.name=Wind Turbines
 block.decay-mod-wind-generator.description=Use wind power to output energy. The amount of energy output varies depending on the current wind force.
 
+block.decay-mod-wave-and-tidal-generator.name=Wave And Tidal Generator
+block.decay-mod-wave-and-tidal-generator.description=Built in water. It uses Wave and the tidal effects of stars on the planet's liquids to generate energy.
 
